force-app/main/default/objects/Pathology_Requests__c/Pathology_Requests__c.object-meta.xml
<CustomObject>
    <label>Pathology Referral</label>
    <nameField>
        <displayFormat>PR - {00000}</displayFormat>
        <label>Pathology Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pathology Referral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>