force-app/main/default/objects/Pathology_Requests__c/fields/Additional_Test__c.field-meta.xml
<CustomField>
    <fullName>Additional_Test__c</fullName>
    <label>Additional Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>