force-app/main/default/objects/Pathology_Requests__c/fields/Bill_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this option if the patient is using an out of town Pathology Lab</description>
    <inlineHelpText>Select this option if the patient is using an out of town Pathology Lab</inlineHelpText>
    <label>Bill to Patient?</label>
    <type>Checkbox</type>
</CustomField>