force-app/main/default/objects/Pathology_Requests__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>This text formula specifies billing type for use in the TS Pathology request document</description>
    <formula>IF(Bill_to_Patient__c, &quot;BILL TO PATIENT&quot;, IF ( Bulk_Bill__c = TRUE, &quot;BULK BILL&quot;, &quot;BILL TO COMPASS&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>