force-app/main/default/objects/Pathology_Requests__c/fields/Bulk_Bill__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecting this option specifies &quot;Bulk Bill&quot; on the Pathology Request Form, if this is left unselected &quot;Privately Bill&quot; will appear instead.</inlineHelpText>
    <label>Bulk Bill?</label>
    <type>Checkbox</type>
</CustomField>