force-app/main/default/objects/Pathology_Requests__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Doctor_Type__c</field>
            <operation>equals</operation>
            <value>Compass Doctor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Pathology Referral</relationshipLabel>
    <relationshipName>Pathology_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>