force-app/main/default/objects/Pathology_Requests__c/fields/Female_Male_Formula__c.field-meta.xml
<CustomField>
    <fullName>Female_Male_Formula__c</fullName>
    <formula>TEXT( Patients_Donors__r.Sex_at_Birth__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Female/Male Formula</label>
    <type>Text</type>
</CustomField>