force-app/main/default/objects/Pathology_Requests__c/fields/Mark_request_as_urgent__c.field-meta.xml
<CustomField>
    <fullName>Mark_request_as_urgent__c</fullName>
    <description>Formula for TS Documents</description>
    <formula>IF(Urgent_Tests__c, &quot;X&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark request as urgent</label>
    <type>Text</type>
</CustomField>