force-app/main/default/objects/Pathology_Requests__c/fields/Offsite_Blood__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Blood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offsite Blood?</label>
    <type>Checkbox</type>
</CustomField>