force-app/main/default/objects/Pathology_Requests__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <formula>Patients_Donors__r.MailingStreet&amp;&quot; &quot;&amp;Patients_Donors__r.MailingCity&amp;&quot;,&quot;&amp;&quot; &quot;&amp;Patients_Donors__r.MailingState&amp;&quot; &quot;&amp;Patients_Donors__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Address</label>
    <type>Text</type>
</CustomField>