force-app/main/default/objects/Pathology_Requests__c/fields/Patients_Donors__c.field-meta.xml
<CustomField>
    <fullName>Patients_Donors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients &amp; Donors</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Pathology_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>