force-app/main/default/objects/Pathology_Requests__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>Please enter when the Pathology Test should take place.</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>