force-app/main/default/objects/Pathology_Requests__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Pathology Request</relationshipLabel>
    <relationshipName>Pathology_Referral</relationshipName>
    <type>Lookup</type>
</CustomField>