force-app/main/default/objects/Pathology_Requests__c/fields/UPDATE__c.field-meta.xml
<CustomField>
    <fullName>UPDATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UPDATE</label>
    <type>Checkbox</type>
</CustomField>