force-app/main/default/objects/Pathology_Requests__c/fields/Urgent_for_email__c.field-meta.xml
<CustomField>
    <fullName>Urgent_for_email__c</fullName>
    <formula>IF(Urgent_Tests__c, &quot;URGENT TESTS&quot;, &quot;NON-URGENT TESTS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgent for email</label>
    <type>Text</type>
</CustomField>