force-app/main/default/objects/Pathology_Requests__c/fields/Urgent_Tests__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Tests__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defaults to TRUE</description>
    <label>Urgent Tests Required?</label>
    <type>Checkbox</type>
</CustomField>