force-app/main/default/objects/Pathology_Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <label>All</label>
</ListView>