force-app/main/default/objects/Pathology_Requests__c/listViews/allSelection_Pathology_Requests.listView-meta.xml
<ListView>
    <fullName>allSelection_Pathology_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>