force-app/main/default/objects/Pathology_Requests__c/listViews/Custom_Pathology_Date.listView-meta.xml
<ListView>
    <fullName>Custom_Pathology_Date</fullName>
    <columns>NAME</columns>
    <columns>Patients_Donors__c</columns>
    <columns>Cycle__c</columns>
    <columns>Doctor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Date__c</field>
        <operation>equals</operation>
        <value>2/4/2024</value>
    </filters>
    <label>Custom Pathology Date</label>
</ListView>