force-app/main/default/objects/Pathology_Requests__c/listViews/Pathology_Yesterday.listView-meta.xml
<ListView>
    <fullName>Pathology_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Patients_Donors__c</columns>
    <columns>Cycle__c</columns>
    <columns>Doctor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Pathology Yesterday</label>
</ListView>